Less usages of schema.getName()